--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
       background: #fff;
       padding: 1rem;
       border: 1px solid #ccc;
+    #copy-status {
+        margin-left: 1rem;
+        font-weight: bold;
+      }
     }
   </style>
 </head>
@@ -36,6 +40,8 @@
   <br>
   <button onclick="convert()">Перетворити</button>
   <div id="result"></div>
+  <button onclick="copyToClipboard()">📋 Копіювати</button>
+  <span id="copy-status" style="margin-left: 1rem; font-weight: bold;"></span>
 
   <script>
     const layoutMap = {
@@ -54,6 +60,36 @@
         const mapped = layoutMap[lower] || ch;
         return ch === lower ? mapped : mapped.toUpperCase();
       }).join('');
+    }
+
+    function copyToClipboard() {
+      const resultText = document.getElementById("result").innerText;
+      const status = document.getElementById("copy-status");
+
+      if (!resultText.trim()) {
+        status.textContent = "❗ Немає що копіювати";
+        status.style.color = "crimson";
+        clearStatusLater();
+        return;
+      }
+
+      navigator.clipboard.writeText(resultText)
+              .then(() => {
+                status.textContent = "✅ Скопійовано";
+                status.style.color = "green";
+                clearStatusLater();
+              })
+              .catch(() => {
+                status.textContent = "⚠️ Не вдалося скопіювати";
+                status.style.color = "darkorange";
+                clearStatusLater();
+              });
+    }
+
+    function clearStatusLater() {
+      setTimeout(() => {
+        document.getElementById("copy-status").textContent = '';
+      }, 2000);
     }
 
     function convert() {
